// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@modernpoacher/gremlins/gremlins/checkbox/field <Field /> With additional props renders 1`] = `
[
  <input
    className="MOCK CLASSNAME"
    disabled={true}
    id="MOCK ID"
    name="MOCK NAME"
    onChange={[Function]}
    onClick={[Function]}
    readOnly={true}
    required={true}
    type="checkbox"
  />,
  <label
    htmlFor="MOCK ID"
  >
    ​
  </label>,
]
`;

exports[`@modernpoacher/gremlins/gremlins/checkbox/field <Field /> With required props renders 1`] = `
[
  <input
    className="MOCK CLASSNAME"
    name="MOCK NAME"
    onChange={[Function]}
    onClick={[Function]}
    type="checkbox"
  />,
  <label>
    ​
  </label>,
]
`;
